[package]
name = "pb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
infer = "0.15.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }

[profile.release]
lto = true
